public/stylesheets/global.css
/* ... */
.field-label {
  margin-top: .75em;
  display:block;
  width: 100%;
  font-size: .875em;
  font-weight: bold;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

#notification {
  color: #000;
  border: 2px solid #94a74d;
  margin-left: 20px;
  margin-right: 40px;
  margin-bottom: 1.0em;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-weight: bold;
  background-image: url(/images/check.gif);
  background-repeat: no-repeat;
  background-position: .5em center;
  padding-top: 0.25em;
  padding-right: 0.25em;
  padding-bottom: 0.25em;
  padding-left: 1.75em;
}

#error {
  color: #D00;
  border: 2px solid #D00;
  margin-left: 20px;
  margin-right: 40px;
  margin-bottom: 1.0em;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-weight: bold;
  padding-top: 0.25em;
  padding-right: 0.25em;
  padding-bottom: 0.25em;
  padding-left: 1.75em;
}

.fieldWithErrors label {
  color: #bb0000;
}

.errorExplanation {
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;  
  border: 2px solid #bb0000;
  padding: 0.25em 0.5em;
  margin-top: 0.5em;
}

.errorExplanation h2 {
  color: #bb0000;
}

.errorExplanation ul {
  list-style: disc inside;
}

div.reservationCard {
  background-color: #eeeeaa;
  color: #000000;
  padding: 1em;
  margin-bottom: 1em;
}

div.reservationCard h2 {
  font-family: Palatino, 'Palatino Linotype', Times, 'Times New Roman', 'URW Bookman L', serif;
  font-style: italic;
/*  text-align: center;
*/  margin-top: 0px;
  font-size: 200%;
  font-weight: bold;
}

div.reservationContainer {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

div.notice {
  font-style: italic;
  font-size: .813em;
}

div#group-by-dept {
  position: absolute;
  top: 2px;
  margin-left: 14em;  
}

input.submit-button {
  height: 3em;
  color: white;
  font-weight: bold;
  margin-bottom: 1em;
  font-size: 1em;
  font-weight: bold;
  cursor: pointer;
}

.confirm {
  background-color: #836c31;
  border: 1px solid #6C5828;
  -moz-border-radius: 15px;
  border-radius: 15px;

}

.delete {
  background-color: #501214;
  -moz-border-radius: 15px;
  border-radius: 15px;
}

.tentative {
  background-color: #666600;
}

.calendar {
  background-color: #4b4b4b;
  -moz-border-radius: 15px;
  border-radius: 15px;
  }

.button-link {
  display: block;
  width: 8em;
  color: white;
  margin-bottom: .5em;
  /*background-color: #836c31;
  border: 1px solid #6C5828;*/
  /*-moz-border-radius: 15px;
  border-radius: 15px;*/

  
}

a.register-button, input.register-button {
	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
	box-shadow:inset 0px 1px 0px 0px #ffffff;
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9) );
	background:-moz-linear-gradient( center top, #f9f9f9 5%, #e9e9e9 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
	background-color:#f9f9f9;
	-moz-border-radius:6px;
	-webkit-border-radius:6px;
	border-radius:6px;
	border:1px solid #dcdcdc;
	display:inline-block;
	color:#333333 !important;
	font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
/*  font-size:15px;*/
	font-weight:bold;
	padding:3px 12px;
	text-decoration:none !important;
	text-shadow:1px 1px 0px #ffffff;
}a.register-button:hover, input.register-button:hover {
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9) );
	background:-moz-linear-gradient( center top, #e9e9e9 5%, #f9f9f9 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9');
	background-color:#e9e9e9;
}a.register-button:active, input.register-button:active {
	position:relative;
	top:1px;
}

input.register-button {
  font-size: 14px;
  padding-top: 6px;
  padding-bottom: 7px;
}

div.register-button {
  margin-top: .5em;
  margin-left: -.5em;
}

#session-details .notice {
  font-size: .9em;
}

.button-link a {
  display: block;
  padding: .25em;
  text-decoration: none;
  text-align: center;
  color: white;
  font-size: .75em;
  font-weight: normal;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

.delete-link a {
  padding: .25em 0;
  text-decoration: none;
  color: #501214;
  font-size: .85em;
  font-weight: normal;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

div#container {
  min-width: 920px;
  background-color: #FFF;
  margin-top: -22px;
  margin-left: 20px;
  margin-right: 40px;
  margin-bottom: 20px;
  padding: 20px 0px;
  min-height: 700px;
}

div.left-column {
  float: left;
  margin-top: 20px;
  width: 200px;
  
}

div#right-column {
  background-color: #FFF;
  margin-top: 20px;
  margin-left: 240px;
  margin-right: 40px;
  margin-bottom: 20px;
  min-height: 600px;
}

div.navigation {
  -moz-border-radius-bottomright: 15px;
  -webkit-border-bottom-right-radius: 15px;
  border-bottom-right-radius: 15px;
  -moz-border-radius-topright: 15px;
  -webkit-border-top-right-radius: 15px;
  border-top-right-radius: 15px;
  background-color: #F6F6F6;
  border: 2px solid #836C31;
  line-height: 2em;
  margin-left: -30px;
  width: 200px;
  padding: 0.5em 0.5em 0.5em 2.5em;
  opacity: 0.8;
  color: #4b4b4b;
}

div.navigation p {
  border-bottom: #4b4b4b dotted 1px;
  font-size: 1em;
}

div.navigation a {
  color: #6C5828;
}

div.navigation a.selected {
  font-weight: bold;
  color: #4b4b4b;
}

div.navigation a:link {
  text-decoration:none;
}
  
div.navigation a:hover {
  text-decoration:underline;
}


.logout-link {
  font-size: 70%;
}

div.sidebar {
  line-height: 2em;
  padding: 0em 0em 0em 0.65em;
  width: 216px;
  margin-top: 20px;
  margin-left: 0px;  
  margin-right: 0px;
}
/* ... */

